# vkgroundcontrol

./: .gitignore  CMakeLists.txt  MissionOptionRow.qml  README.md  qgcimages.qrc  qgcresources.qrc  qgroundcontrol.qrc
cmake/: CustomOptions.cmake
doc/: Doxyfile  dev.md
qtmqtt/: CMakeLists.txt  qmqttauthenticationproperties.h  qmqttclient.h  qmqttconnectionproperties.h  qmqttglobal.h  qmqttmessage.h  qmqttpublishproperties.h  qmqttsubscription.h  qmqttsubscriptionproperties.h  qmqtttopicfilter.h  qmqtttopicname.h  qmqtttype.h  qtmqttexports.h
src/: CMakeLists.txt  QGCApplication.cc  main.cc  pumpmodel.cpp  pumpmodel.h  tcpclient.cpp  tcpclient.h
src/Gimbal/: CMakeLists.txt  GimbalController.cpp  GimbalController.h
src/Gimbal/Link/: ClientFactory.cpp  ClientFactory.h  GimbalLinkClient.h  GimbalTcpClient.cpp  (+5 more)
src/Mqtt/: CMakeLists.txt  VKMqttClient.cpp  VKMqttClient.h
src/QmlControls/: CMakeLists.txt  QGroundControlQmlGlobal.cc  QGroundControlQmlGlobal.h  ScreenToolsController.cc
src/QtLocationPlugin/: QGCTileCacheWorker.h
src/Settings/: App.SettingsGroup.json  AppSettings.cc  AppSettings.h  Video.SettingsGroup.json  VideoSettings.cc  VideoSettings.h
src/UI/: MainRootWindow.qml
src/Utilities/: CMakeLists.txt  SignalHandler.cc
src/VKServer/: CMakeLists.txt  ChangePassword.qml  CustomTextEdit.qml  Login.qml  LoginRegisterPopup.qml  Register.qml
src/VideoManager/: VideoManager.cc  VideoManager.h
translations/: qgc_source_en_US.qm  qgc_source_en_US.ts  qgc_source_zh_CN.qm  qgc_source_zh_CN.ts
vkqtsdk/data/: vkimustatus.cpp
vkqtsdk/include/: areamission_model.h  mission_model.h  objmanager.h  scanmission_model.h  vehicle.h  vkqtsdk.h  vkqtsdktypes.h  vkservercontroller.h
vkqtsdk/link/: 4gclient.cpp  4gclient.h
vkqtsdk/vkserver/: vkservercontroller.cpp  vkservercontrollerimpl.cpp  vkservercontrollerimpl.h
(+62 files in other folders)
